sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
  var c = 0
    for (i <- 1 to getNombreValeurs()-1) {
    	v = getValeur(i)
      var k = 1
      while (i-k>0) {
        if plusPetit(v, i-1) {
          echange(i-k, i-k+1);
          c = k
        }
        k = k + 1
      }
      setValeur(c, v)
  	}
}